--- a/.gitignore
+++ b/.gitignore
@@ -156,7 +156,9 @@ cython_debug/
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+.idea/inspectionProfiles
 .idea/*.xml
+.idea/*.iml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
